<resources>
    <string name="app_name">Remote Work</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>

    <string name="error_fill">Please fill all required fields.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
